src/objects/Override_Standard_Button_Message__mdt.object
<CustomObject>
    <fields>
        <fullName>Body_Label_API__c</fullName>
        <label>Body Label API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Label_API_Agree__c</fullName>
        <label>Button Label API Agree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Button_Label_API_Cancel__c</fullName>
        <label>Button Label API Cancel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name_to_Redirect__c</fullName>
        <label>Object Api Name to Redirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Label_API__c</fullName>
        <label>Title Label API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>object_api_name__c</fullName>
        <label>Object Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Override Standard Button Message</label>
    <pluralLabel>Overrides Standards Buttons Messages</pluralLabel>
</CustomObject>